[package]
name = "mosaic-inference"
version = "0.1.0"
edition = "2021"
description = "Run any LLM on weak hardware (4GB RAM) using Layer Streaming + mmap + KV Disk Offload"
license = "MIT"
authors = ["Radhwen Daly Hamdouni <radhwen@ecertifpro.com>"]
repository = "https://github.com/radhwendalyhamdouni/mosaic-inference"
readme = "README.md"
keywords = ["llm", "inference", "rust", "low-memory", "quantization", "mmap"]
categories = ["science", "command-line-utilities"]

[dependencies]
# Memory-mapped file loading (load model from SSD/HDD without full RAM usage)
memmap2 = "0.9"
# Async runtime for background layer prefetching
tokio = { version = "1", features = ["full"] }
# HTTP server for OpenAI-compatible API
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Error handling
anyhow = "1"
thiserror = "1"
# Byte manipulation for quantization
byteorder = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
